[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tanks/TankBody.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tanks/tank.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 62, 62 )

[node name="Tank" type="KinematicBody2D" groups=["Tank"]]
script = ExtResource( 2 )
speed = 300

[node name="Body" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="RayCastUp" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -64 )

[node name="RayCastDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 64 )

[node name="RayCastRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 64, 0 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -64, 0 )

[connection signal="tween_all_completed" from="Tween" to="." method="movement_completed"]
